[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epic-build-doc-helper"
version = "0.1.0"
description = "Local prototype for Epic Build Documentation Helper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
epic-doc-helper = "epic_build_doc_helper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["epic_build_doc_helper*"]
